feat: apply new loan added
